scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/events/access-to-entity-operator.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-entity-operator
  namespace: "eventsNamespace"
  labels:
    component: cpfs3
    service: events
spec:
  podSelector:
    matchLabels:
      ibmevents.ibm.com/cluster: KAFKA_INSTANCE_NAME
      ibmevents.ibm.com/kind: Kafka
      ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-entity-operator
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
    - ports:
        - protocol: TCP
          port: 8081
  policyTypes:
    - Ingress
