scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/events/access-to-kafka.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-kafka
  namespace: "eventsNamespace"
  labels:
    component: cpfs3
    service: events
spec:
  podSelector:
    matchLabels:
      ibmevents.ibm.com/cluster: KAFKA_INSTANCE_NAME
      ibmevents.ibm.com/kind: Kafka
      ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-kafka
  ingress:
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/cluster: KAFKA_INSTANCE_NAME
              ibmevents.ibm.com/kind: Kafka
              ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-kafka
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/kind: cluster-operator
    - ports:
        - protocol: TCP
          port: 9091
      from:
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/kind: cluster-operator
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/cluster: KAFKA_INSTANCE_NAME
              ibmevents.ibm.com/kind: Kafka
              ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-kafka
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-entity-operator
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-kafka-exporter
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/name: KAFKA_INSTANCE_NAME-cruise-control
    - ports:
        - protocol: TCP
          port: 8443
      from:
        - podSelector:
            matchLabels:
              ibmevents.ibm.com/kind: cluster-operator
    - ports:
        - protocol: TCP
          port: 9093
    - ports:
        - protocol: TCP
          port: 9095
  policyTypes:
    - Ingress
